--- a/index.html
+++ b/index.html
@@ -15,60 +15,76 @@
       <div class="nav">
 
         <ul>
-          <li>Moi</li>
-          <li>Mon Parcours</li>
-          <li>Projet Web</li>
-          <li>Competences</li>
-          <li>Contacts</li>
+
+          <li><a href = "#ancreParcours">à Propos</a></li>
+          <li><a href = "#ancreProjets">Projet Web</a></li>
+          <li><a href = "#ancreCompetences">Competences</a></li>
+          <li><a href = "#ancreContact">Contact</a></li>
         </ul>
   <!-- En-tête du site -->
       </div>
       <div class="nom">
         <h2>Ayoub Eddaghoughi</h2>
-        <h1>SITE EN TRAVAUX !!</h1>
-          <h1>SITE EN TRAVAUX !!</h1>
-            <h1>SITE EN TRAVAUX !!</h1>
-            
+
         <p>Apprenant développeur web</p>
 
       </div>
-      <div class="moi">
 
-        <h2>Moi</h2>
-        <p>
-          Ceci n'est vrai qu'à un point de vue; car cultivant ces semences à sa manière,
-          les développant dans un
-          sens exclusif, et par une méthode qui lui est propre, il en fit sortir un système
-          étrange, dont les Cartésiens et les admirateurs de Descartes repoussent la solidarité.
-        </p>
-<!-- Contenu principal, texte de la page -->
-
+      <div class="parcours">
+        <h2 id="ancreParcours"> à Propos</h2>
+        <div class="texte2">
+        <p> Après avoir quitté le lycée pour trouver ma voie j'ai découvert plusieur corps de métier différent qui sont:</p>
+        <div class="texte">
+          <p> -le domaine agricole (fromager et chevrier) <br>
+            -l'automaubile (garagiste)<br>
+            -Le livre (libraire)<br>
+            -l'informatique (maintenance)</p>
+        </div>
+        <p>Pour ensuite choisir d'intégré Up To pour suivre une formation de devellopement web Basée sur la méthode Simplon,
+           Up To propose une formation intensive axée
+          sur l'apprentissage "learning by doing" et "learning by teaching", travail en mode projet,
+           et offre une immersion en entreprise grâce à nos partenaires. </p>
+           <p>
 
       </div>
-      <div class="parcours">
-        <h2>Mes Objectif</h2>
-        <p> Make first impression count with a large headline "&" full-page background. </p>
-        <p>Create is super easy to use, works out-of-the-box and it’s great for your personal, business or even organization site.</p>
-
-
 
       </div>
       <div class="projet">
-
-
+      <h2 id="ancreProjets"> Mes Projets</h2>
+      <img src ="images/donuts.png" class="donuts">
+      <img src ="images/integration4.png" class="integration4">
+      <img src ="images/integration5.png" class="integration5">
 
       </div>
       <div class="competence">
+          <h2 id="ancreCompetences">En apprentissage</h2>
         <div class="ligne1">
           <img src="images/htmlLogo.png" class="logo">
           <img src="images/cssLogo.png" class="logo2">
           <img src="images/jsLogo.png" class="logo3">
-          <img src="images/logo2.jpg" class="logo4">
+          <img src="images/logo_PHP.png" class="logo3">
+          <img src="images/sql-couleur_03.png" class="logo3">
+        </div>
+        <div class="ligne2">
+          <img src="images/bootstrap_logo.png" class="logo3">
+          <img src="images/jquery-couleur.png" class="logo3">
+          <img src="images/symphony-couleur.png" class="logo3">
         </div>
       </div>
 
       <div class="contacts">
-
+        <div class="git">
+          <a href="https://github.com/AyoubEdda" target="_blank"><img src="images/git.png"></a>
+        </div>
+        <div class="mail">
+          <h2 id="ancreContact">Contactez moi</h2>
+          <p>Ayoub Eddaghoughi</p>
+          <p>0637646969</p>
+          <p>eddaghoughi.ayoub@gmail.com</p>
+        </div>
+        <div class="linkedin">
+          <img src="images/linkedin.png">
+        </div>
       </div>
     </div>
   </body>
