--- a/index.html
+++ b/index.html
@@ -6,10 +6,13 @@
     <title>Ayoub Eddaghoughi</title>
       <meta charset="utf-8">
     <link rel="stylesheet" type="text/css" href="style.css">
-
+     <link href="https://fonts.googleapis.com/css?family=Dosis" rel="stylesheet">  <!-- /* pour le nom et preom*/ -->
+   <link href="https://fonts.googleapis.com/css?family=Dosis|Indie+Flower" rel="stylesheet">  <!--/* pour le texte de la page*/ -->
+  <link href="https://fonts.googleapis.com/css?family=Dosis|Indie+Flower|Josefin+Sans" rel="stylesheet">  <!--/* pour les titre de page*/ -->
 
   </head>
   <body>
+
     <div class="container">
 
       <div class="nav">
@@ -32,20 +35,33 @@
 
       <div class="parcours">
         <h2 id="ancreParcours"> à Propos</h2>
-        <div class="texte2">
-        <p> Après avoir quitté le lycée pour trouver ma voie j'ai découvert plusieur corps de métier différent qui sont:</p>
-        <div class="texte">
-          <p> -le domaine agricole (fromager et chevrier) <br>
-            -l'automaubile (garagiste)<br>
-            -Le livre (libraire)<br>
-            -l'informatique (maintenance)</p>
-        </div>
-        <p>Pour ensuite choisir d'intégré Up To pour suivre une formation de devellopement web Basée sur la méthode Simplon,
-           Up To propose une formation intensive axée
-          sur l'apprentissage "learning by doing" et "learning by teaching", travail en mode projet,
-           et offre une immersion en entreprise grâce à nos partenaires. </p>
-           <p>
+        <div class="grosBlock">
+        <div class="block1">
+        <div class="partie1">
+        <img src="images/engrenage.png">
+      </div>
+      <div class="partie2">
 
+        <p>
+          L'orsque j'ai eu l'occasion de quittez le lycée pour me lancer dans le monde du
+          travail je n'ai pas ésiter une seconde et de la j'ai commencer a travaillé dans l'agricole
+          pour ensuite me redirigé  vers une formation dans le but de découvrir le métier qui me corespondraio le mieux.
+      </p>
+      </div>
+    </div>
+    <div class="block2">
+      <div class="partie3">
+        <p>
+         Puis de la j'ai eu la chance de découvrir Up To grace a un ami et  ainsi suivre une formation de developement web Basée sur la méthode Simplon,Up To propose une formation intensive axée
+         sur l'apprentissage "learning by doing" et "learning by teaching", travail en mode projet,
+         et offre une immersion en entreprise grâce à nos partenaires.
+       </p>
+     </div>
+     <div class="partie4">
+       <img src=" images/upto.png">
+     </div>
+   </div>
+   </div>
       </div>
 
       </div>
@@ -57,7 +73,7 @@
 
       </div>
       <div class="competence">
-          <h2 id="ancreCompetences">En apprentissage</h2>
+          <h2 id="ancreCompetences">En apprentissage...</h2>
         <div class="ligne1">
           <img src="images/htmlLogo.png" class="logo">
           <img src="images/cssLogo.png" class="logo2">
