--- a/index.html
+++ b/index.html
@@ -43,16 +43,17 @@
       <div class="partie2">
 
         <p>
-          L'orsque j'ai eu l'occasion de quittez le lycée pour me lancer dans le monde du
-          travail je n'ai pas ésiter une seconde et de la j'ai commencer a travaillé dans l'agricole
-          pour ensuite me redirigé  vers une formation dans le but de découvrir le métier qui me corespondraio le mieux.
+          Lorsque j'ai eu l'occasion de quitter le lycée pour me lancer dans le monde du
+          travail je n'ai pas hésiter une seconde et de là j'ai commencer à travailler dans l'agricole
+          pour ensuite me rediriger vers une formation dans le but de découvrir le métier qui me corespondrait le mieux.
       </p>
       </div>
     </div>
     <div class="block2">
       <div class="partie3">
         <p>
-         Puis de la j'ai eu la chance de découvrir Up To grace a un ami et  ainsi suivre une formation de developement web Basée sur la méthode Simplon,Up To propose une formation intensive axée
+         Puis de là j'ai eu la chance de découvrir Up To grâce a un ami et ainsi suivre une formation de developpement web basée sur la méthode Simplon,Up To
+         propose une formation intensive axée
          sur l'apprentissage "learning by doing" et "learning by teaching", travail en mode projet,
          et offre une immersion en entreprise grâce à nos partenaires.
        </p>
@@ -98,8 +99,11 @@
           <p>0637646969</p>
           <p>eddaghoughi.ayoub@gmail.com</p>
         </div>
+        <div class="twitter">
+            <a href="https://twitter.com/AyoubUpTo?lang=fr" target="_blank"><img src="images/twitter.png"></a>
+          </div>
         <div class="linkedin">
-          <img src="images/linkedin.png">
+          <a href="https://www.linkedin.com/in/ayoub-eddaghoughi-873498132?trk=hp-identity-name" target="_blank"><img src="images/linkedin.png"></a>
         </div>
       </div>
     </div>
