--- a/index.html
+++ b/index.html
@@ -43,9 +43,10 @@
       <div class="partie2">
 
         <p>
-          Lorsque j'ai eu l'occasion de quitter le lycée pour me lancer dans le monde du
-          travail je n'ai pas hésiter une seconde et de là j'ai commencer à travailler dans l'agricole
-          pour ensuite me rediriger vers une formation dans le but de découvrir le métier qui me corespondrait le mieux.
+          Lorsque j'ai eu l'occasion de quitter le lycée, j'ai pris la décision de me lancer dans le monde du
+          travail et je n'ai pas hésité une seconde. De là j'ai commencé à travailler dans l'agricol,
+          pour ensuite me rediriger vers une formation dans le but de découvrir le
+          métier qui me corespondrait le mieux.
       </p>
       </div>
     </div>
