--- a/index.html
+++ b/index.html
@@ -43,8 +43,10 @@
       <div class="partie2">
 
         <p>
-          Lorsque j'ai eu l'occasion de quitter le lycée, j'ai pris la décision de me lancer dans le monde du
-          travail et je n'ai pas hésité une seconde. De là j'ai commencé à travailler dans l'agricol,
+          Lorsque j'ai eu l'occasion de quitter le lycée, je n'ai
+          pas hésité une seconde et 
+          j'ai pris la décision de me lancer dans le monde du
+          travail. De là j'ai commencé à travailler dans l'agricol,
           pour ensuite me rediriger vers une formation dans le but de découvrir le
           métier qui me corespondrait le mieux.
       </p>
